# vllm-plugin-FL

./: .gitignore  .typos.toml  README.md  pyproject.toml  requirements.txt  requirements_iluvatar.txt  setup.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: blank.md  bug-report.yml  ci-sev.md  config.yml  documentation.yml  feature-request.yml
.github/configs/: ascend.yml  cuda.yml  maca.yml  musa.yml  platforms.yml
.github/scripts/: detect_platforms.py  generate_matrix.py  load_config.py  notify_feishu.py
.github/scripts/ascend/: check.sh  setup.sh
.github/scripts/cuda/: check.sh  setup.sh
.github/scripts/maca/: check.sh  setup.sh
.github/scripts/musa/: check.sh  setup.sh
.github/workflows/: _build_wheel.yml  _e2e_test.yml  _functional_test.yml  _lint.yml  _notify_feishu.yml  _platform_test.yml  _unit_test.yml  build-wheel.yml  ci.yml  code-scan.yml  functional-test.yml  labeler.yml  lint.yml  notify-feishu.yml  notify_feishu.yml  unit-test.yml
benchmarks/: benchmark_throughput_autotune.py  benchmark_throughput_flagos.py  benchmark_throughput_flagos_statistics.py
benchmarks/flagos_eval/: README.md  collect_mixed_benchmark_results.py  run_mixed_benchmark.sh
docker/: build.sh
docker/ascend/: Dockerfile
docker/cuda/: Dockerfile
docker/maca/: Dockerfile
docker/musa/: Dockerfile
docs/: naming-convention.md
examples/: glm_5_offline_inference.py  offline_inference.py  qwen3_5_offline_inference.py  qwen3_next_offline_inference.py
examples/disaggregated_serving_xpyd/: router.py  run_flagcx_connector.md
examples/minicpm/: README.md
tests/: README.md  __init__.py  conftest.py  run.py  test_offline_minicmp.py  test_offline_qwen3_next.py  test_vllm_serve_minicmp.py  test_vllm_serve_qwen3_next.py
tests/benchmarks/: test_throughput_cli.py
tests/e2e_tests/: conftest.py  test_offline_inference.py
tests/e2e_tests/inference/: test_inference_smoke.py
tests/e2e_tests/serving/: server_helper.py  test_serving_smoke.py
tests/functional_tests/: __init__.py  conftest.py
tests/functional_tests/compilation/: __init__.py  test_graph_capture.py
tests/functional_tests/dispatch/: __init__.py  test_dispatch_flow.py
tests/functional_tests/distributed/: __init__.py  test_collective_ops.py
tests/functional_tests/flaggems/: test_flaggems_get_ops.py  test_gems_whitelist.py
tests/functional_tests/inference/: test_offline_minicpm.py  test_offline_qwen3_06b.py  test_offline_qwen3_next.py  vllm_runner.py
tests/functional_tests/ops/: __init__.py  test_ops_correctness.py
tests/functional_tests/serving/: test_vllm_serve_minicpm.py  test_vllm_serve_qwen3_next.py
tests/models/minicpm/: o45_tp4.yaml
tests/models/qwen3/: 06b_tp2.yaml  4b_tp2.yaml  next_tp8.yaml
tests/models/qwen3_5/: 35b_tp4.yaml
tests/unit_tests/: __init__.py  conftest.py  test_envs.py  test_utils.py  test_version.py
tests/unit_tests/compilation/: test_graph.py
tests/unit_tests/dispatch/: test_builtin_ops.py  test_call_op.py  test_config_utils.py  test_discovery.py  test_dispatch_config.py  test_io_common.py  test_logger_manager.py  test_manager.py  test_policy.py  test_registry.py  test_types.py
tests/unit_tests/distributed/: test_communicator.py  test_flagcx.py
tests/unit_tests/flaggems/: test_flaggems_get_ops.py  test_gems_whitelist.py
tests/unit_tests/ops/: test_activation.py  test_layernorm.py  test_numerical.py  test_rotary_embedding.py
tests/unit_tests/worker/: test_model_runner.py  test_worker.py
tests/utils/: cleanup.py  device_utils.py  gold.py  model_config.py  platform_config.py  report.py
vllm_fl/: __init__.py  platform.py  utils.py
vllm_fl/attention/: utils.py
vllm_fl/compilation/: graph.py
vllm_fl/configs/: qwen3_5.py  qwen3_5_moe.py
vllm_fl/dispatch/: README.md  __init__.py  builtin_ops.py  logger_manager.py  manager.py  policy.py
vllm_fl/dispatch/backends/: __init__.py
vllm_fl/dispatch/backends/flaggems/: flaggems.py  register_ops.py
vllm_fl/dispatch/backends/flaggems/impl/: activation.py  attention.py  custom_attention.py  mla.py  normalization.py  rotary.py
vllm_fl/dispatch/backends/reference/: reference.py
vllm_fl/dispatch/backends/reference/impl/: activation.py  normalization.py  rotary.py
vllm_fl/dispatch/config/: __init__.py  ascend.yaml  cuda.yaml  iluvatar.yaml  kunlunxin.yaml  metax.yaml  musa.yaml  nvidia.yaml  ptg.yaml  utils.py
vllm_fl/distributed/: __init__.py
vllm_fl/distributed/kv_transfer/: flagcx_connector.py
vllm_fl/models/: fla_ops.py  glm_moe_dsa.py  kimi_k25.py  qwen3_5.py  qwen3_next.py
vllm_fl/ops/: activation.py  custom_ops.py  layernorm.py  rotary_embedding.py
vllm_fl/ops/fused_moe/: fused_moe.py  layer.py
vllm_fl/patches/: glm_moe_dsa.py
vllm_fl/worker/: model_runner.py  worker.py
